--- a/config/pinpad_rssm_v1.yaml
+++ b/config/pinpad_rssm_v1.yaml
@@ -79,11 +79,19 @@ model:
 datamodule:
   _target_: rssm.dataset.datamodule.ActionObservationDataModule
   data_name: pinpad
-  batch_size: 64
+  batch_size: 32
   seq_per_batch: 1
   num_workers: 4
   train_transforms:
     _target_: rssm.dataset.augmentation.Transforms
+    action_input:
+      _target_: torchvision.transforms.Compose
+      transforms:
+        -
+          _target_: rssm.dataset.augmentation.AdditiveNoise
+          std: 0.2
+        -
+          _target_: rssm.dataset.augmentation.DynamicsNoise
   val_transforms:
     _target_: rssm.dataset.augmentation.Transforms
 
@@ -91,7 +99,7 @@ trainer:
   _target_: lightning.Trainer
   accelerator: gpu
   devices:
-    - 1
+    - 3
   max_epochs: -1
   gradient_clip_val: 10
   deterministic: true
