--- a/config/rope_rssm_v1.yaml
+++ b/config/rope_rssm_v1.yaml
@@ -1,26 +1,32 @@
+deterministic_size: 200
+stochastic_size: 30
+hidden_size: 200
+obs_embed_size: 128
+activation_name: ELU
+
 model:
   _target_: rssm.v1.module.RSSMV1
   representation_config:
     _target_: rssm.base.module.RepresentationConfig
-    obs_embed_size: 32
-    hidden_size: 200
-    deterministic_size: 200
-    stochastic_size: 30
-    activation_name: ELU
+    obs_embed_size: ${obs_embed_size}
+    hidden_size: ${hidden_size}
+    deterministic_size: ${deterministic_size}
+    stochastic_size: ${stochastic_size}
+    activation_name: ${activation_name}
   transition_config:
     _target_: rssm.base.module.TransitionConfig
-    hidden_size: 200
-    activation_name: ELU
-    deterministic_size: 200
-    stochastic_size: 30
+    hidden_size: ${hidden_size}
+    activation_name: ${activation_name}
+    deterministic_size: ${deterministic_size}
+    stochastic_size: ${stochastic_size}
     action_size: 7
   encoder_config:
     _target_: cnn.network.EncoderConfig
     linear_sizes:
       _target_: builtins.tuple
       _args_:
-        - [512, 128]
-    activation_name: ELU
+        - [256, 128]
+    activation_name: ${activation_name}
     out_activation_name: Identity
     channels:
       _target_: builtins.tuple
@@ -33,7 +39,7 @@ model:
     strides:
       _target_: builtins.tuple
       _args_:
-        - [2, 2, 2]
+        - [1, 2, 2]
     paddings:
       _target_: builtins.tuple
       _args_:
@@ -41,14 +47,14 @@ model:
     observation_shape:
       _target_: builtins.tuple
       _args_:
-        - [3, 64, 64]
+        - [3, 60, 80]
   decoder_config:
     _target_: cnn.DecoderConfig
     linear_sizes:
       _target_: builtins.tuple
       _args_:
-        - [230, 512]
-    activation_name: ELU
+        - [230, 256]
+    activation_name: ${activation_name}
     out_activation_name: Sigmoid
     channels:
       _target_: builtins.tuple
@@ -57,11 +63,11 @@ model:
     kernel_sizes:
       _target_: builtins.tuple
       _args_:
-        - [4, 4, 4]
+        - [3, 4, 4]
     strides:
       _target_: builtins.tuple
       _args_:
-        - [2, 2, 2]
+        - [1, 2, 2]
     paddings:
       _target_: builtins.tuple
       _args_:
@@ -73,23 +79,43 @@ model:
     observation_shape:
       _target_: builtins.tuple
       _args_:
-        - [3, 64, 64]
+        - [3, 60, 80]
   
 
 datamodule:
   _target_: rssm.dataset.datamodule.ActionObservationDataModule
-  data_name: pinpad
-  batch_size: 32
-  seq_per_batch: 1
+  data_name: rope_play_fixed_end
+  batch_size: 64
+  seq_per_batch: 2
   num_workers: 4
   train_transforms:
     _target_: rssm.dataset.augmentation.Transforms
+    action:
+      _target_: torchvision.transforms.Compose
+      transforms:
+        -
+          _target_: rssm.dataset.augmentation.RandomWindow
+          upper_window_size: 51
+          lower_window_size: 50
+    observation:
+      _target_: torchvision.transforms.Compose
+      transforms:
+        - 
+          _target_: rssm.dataset.augmentation.RandomWindow
+          upper_window_size: 51
+          lower_window_size: 50
     action_input:
       _target_: torchvision.transforms.Compose
       transforms:
         -
           _target_: rssm.dataset.augmentation.AdditiveNoise
-          std: 0.1
+          std: 0.2
+    observation_input:
+      _target_: torchvision.transforms.Compose
+      transforms:
+        -
+          _target_: rssm.dataset.augmentation.AdditiveNoise
+          std: 0.2
         -
           _target_: rssm.dataset.augmentation.DynamicsNoise
   val_transforms:
@@ -99,7 +125,7 @@ trainer:
   _target_: lightning.Trainer
   accelerator: gpu
   devices:
-    - 3
+    - 2
   max_epochs: -1
   gradient_clip_val: 10
   deterministic: true
@@ -121,8 +147,3 @@ callbacks:
       - 0
       - 1
       - 2
-      - 3
-      - 20
-      - 21
-      - 22
-      - 23
