--- a/config/pinpad_rssm_v1.yaml
+++ b/config/pinpad_rssm_v1.yaml
@@ -1,12 +1,12 @@
-deterministic_size: 200
-stochastic_size: 30
+deterministic_size: 32
+stochastic_size: 4
 activation_name: ELU
 
 model:
   _target_: rssm.v1.module.RSSMV1
   representation_config:
     _target_: rssm.base.module.RepresentationConfig
-    obs_embed_size: 4096
+    obs_embed_size: 16
     hidden_size: ${deterministic_size}
     deterministic_size: ${deterministic_size}
     stochastic_size: ${stochastic_size}
@@ -23,7 +23,7 @@ model:
     linear_sizes:
       _target_: builtins.tuple
       _args_:
-        - [0,]
+        - [16,]
     activation_name: ${activation_name}
     out_activation_name: Identity
     channels:
@@ -51,7 +51,7 @@ model:
     linear_sizes:
       _target_: builtins.tuple
       _args_:
-        - [230,]
+        - [36, 256]
     activation_name: ${activation_name}
     out_activation_name: Sigmoid
     channels:
@@ -83,28 +83,23 @@ model:
 datamodule:
   _target_: rssm.dataset.datamodule.ActionObservationDataModule
   data_name: pinpad
-  batch_size: 64
+  batch_size: 32
   seq_per_batch: 1
   num_workers: 4
   train_transforms:
     _target_: rssm.dataset.augmentation.Transforms
-
-    action_input:
-      _target_: torchvision.transforms.Compose
-      transforms:
-        -
-          _target_: rssm.dataset.augmentation.AdditiveNoise
-          std: 0.2
-        -
-          _target_: rssm.dataset.augmentation.DynamicsNoise
-    observation_input:
-      _target_: torchvision.transforms.Compose
-      transforms:
-        -
-          _target_: rssm.dataset.augmentation.DynamicsNoise
-        -
-          _target_: rssm.dataset.augmentation.AdditiveNoise
-          std: 0.3
+    # action_input:
+    #   _target_: torchvision.transforms.Compose
+    #   transforms:
+    #     -
+    #       _target_: rssm.dataset.augmentation.AdditiveNoise
+    #       std: 0.1
+    # observation_input:
+    #   _target_: torchvision.transforms.Compose
+    #   transforms:
+    #     -
+    #       _target_: rssm.dataset.augmentation.AdditiveNoise
+    #       std: 0.2
   val_transforms:
     _target_: rssm.dataset.augmentation.Transforms
 
@@ -112,7 +107,7 @@ trainer:
   _target_: lightning.Trainer
   accelerator: gpu
   devices:
-    - 2
+    - 3
   max_epochs: -1
   gradient_clip_val: 10
   deterministic: true
