--- a/config/pinpad_rssm_v2.yaml
+++ b/config/pinpad_rssm_v2.yaml
@@ -1,30 +1,38 @@
+deterministic_size: 64
+category_size: 4
+class_size: 4
+stochastic_size: ${mul:${class_size},${class_size}}
+obs_embed_size: 32
+activation_name: ELU
+action_size: 1
+
 model:
   _target_: rssm.v2.module.RSSMV2
   representation_config:
     _target_: rssm.base.module.RepresentationConfig
-    obs_embed_size: 128
-    hidden_size: 600
-    deterministic_size: 600
-    stochastic_size: 256
-    category_size: 16
-    class_size: 16
-    activation_name: ELU
+    obs_embed_size: 4096
+    hidden_size: ${deterministic_size}
+    deterministic_size: ${deterministic_size}
+    stochastic_size: ${stochastic_size}
+    category_size: ${category_size}
+    class_size: ${class_size}
+    activation_name: ${activation_name}
   transition_config:
     _target_: rssm.base.module.TransitionConfig
-    hidden_size: 600
-    activation_name: ELU
-    deterministic_size: 600
-    stochastic_size: 256
-    action_size: 1
-    category_size: 16
-    class_size: 16
+    hidden_size: ${deterministic_size}
+    activation_name: ${activation_name}
+    deterministic_size: ${deterministic_size}
+    stochastic_size: ${stochastic_size}
+    action_size: ${action_size}
+    category_size: ${category_size}
+    class_size: ${class_size}
   encoder_config:
     _target_: cnn.network.EncoderConfig
     linear_sizes:
       _target_: builtins.tuple
       _args_:
-        - [512, 128]
-    activation_name: ELU
+        - [0,]
+    activation_name: ${activation_name}
     out_activation_name: Identity
     channels:
       _target_: builtins.tuple
@@ -51,8 +59,8 @@ model:
     linear_sizes:
       _target_: builtins.tuple
       _args_:
-        - [856, 512]
-    activation_name: ELU
+        - [80, 256]
+    activation_name: ${activation_name}
     out_activation_name: Sigmoid
     channels:
       _target_: builtins.tuple
@@ -83,7 +91,7 @@ model:
 datamodule:
   _target_: rssm.dataset.datamodule.ActionObservationDataModule
   data_name: pinpad
-  batch_size: 64
+  batch_size: 32
   seq_per_batch: 1
   num_workers: 4
   train_transforms:
@@ -94,17 +102,12 @@ datamodule:
         -
           _target_: rssm.dataset.augmentation.AdditiveNoise
           std: 0.2
-        -
-          _target_: rssm.dataset.augmentation.DynamicsNoise
     observation_input:
       _target_: torchvision.transforms.Compose
       transforms:
         -
           _target_: rssm.dataset.augmentation.AdditiveNoise
           std: 0.2
-        -
-          _target_: rssm.dataset.augmentation.DynamicsNoise
-        
   val_transforms:
     _target_: rssm.dataset.augmentation.Transforms
 
@@ -129,7 +132,7 @@ callbacks:
     verbose: true
   -
     _target_: rssm.v2.callback.LogRSSMV2Output
-    every_n_epochs: 200
+    every_n_epochs: 100
     indices:
       - 0
       - 1
