--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dev-dependencies = [
     "torch==2.0.1+cu117",
     "torchvision==0.15.2+cu117",
     "lightning>=2.1.3",
+    "tsaug @ git+https://github.com/nomutin/tsaug.git",
 ]
 
 [tool.hatch.metadata]
