[fix] new CUDA settings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,18 @@
 [project]
 name = "rssm"
 version = "0.1.0"
-description = "Reccurent State Space Model"
+description = "Reccurent State-Space Model"
 dependencies = [
+    "torch>=2.2.1",
+    "torchvision>=0.17.1",
+    "lightning>=2.2.1",
     "einops>=0.7.0",
-    "hydra-core>=1.3.2",
-    "wandb>=0.16.1",
-    "cnn @ git+https://github.com/nomutin/CNN.git",
-    "distribution_extention @ git+https://github.com/nomutin/distribution-extention.git",
+    "wandb>=0.16.4",
+    "rich>=13.7.1",
+    "lightning-bolts>=0.7.0",
+    "distribution-extension @ git+https://github.com/nomutin/distribution-extension.git",
+    "matplotlib>=3.7.5",
+    "gdown>=5.1.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
@@ -19,29 +24,19 @@ build-backend = "hatchling.build"
 [tool.rye]
 managed = true
 dev-dependencies = [
-    "isort>=5.13.2",
-    "ruff>=0.1.8",
     "pytest-cov>=4.1.0",
-    "black>=23.12.0",
-    "mypy>=1.7.1",
-    "imageio>=2.33.1",
-    "moviepy>=1.0.3",
-    "rich>=13.7.0",
-    "gdown>=4.7.1",
-    "matplotlib>=3.7.4",
-    "torch==2.0.1+cu117",
-    "torchvision==0.15.2+cu117",
-    "lightning>=2.1.3",
-    "tsaug @ git+https://github.com/nomutin/tsaug.git",
+    "isort>=5.13.2",
+    "ruff>=0.3.3",
+    "black>=24.3.0",
+    "mypy>=1.9.0",
+    "pre-commit>=3.5.0",
 ]
 
 [tool.hatch.metadata]
 allow-direct-references = true
 
-[[tool.rye.sources]]
-name = "torch"
-url = "https://download.pytorch.org/whl/cu117"
-type = "index"
+[tool.hatch.build.targets.wheel]
+packages = ["src/rssm"]
 
 [tool.black]
 line-length = 79
@@ -53,7 +48,7 @@ filterwarnings = [
     'ignore:distutils Version classes are deprecated.:DeprecationWarning',
 ]
 
-[tool.mypy]
+[tool.mypy]  # TODO: simplify settings
 python_version = 3.8
 # following setting is same as pysen
 # https://github.com/pfnet/pysen/blob/main/setup.cfg#L12
@@ -87,7 +82,8 @@ ignore = [
     "ANN101",  # Missing type annotation for self in method
     "ANN102",  # Missing type annotation for cls in classmethod
     "PGH003",  # Use specific rule codes when ignoring type issues
-    "I001",    # Import block is un-sorted or un-formatted
+    "PLR0913", # Too many arguments in function definition
+    "I",
 ]
 fixable = ["ALL"]
 unfixable = []
