--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "distribution-extension @ git+https://github.com/nomutin/distribution-extension.git",
     "matplotlib>=3.7.5",
     "gdown>=5.1.0",
+    "torchrl>=0.3.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
