--- a/config/two_buttons_v1.yaml
+++ b/config/two_buttons_v1.yaml
@@ -1,13 +1,34 @@
 ---
+seed_everything: 42
+
 model:
   class_path: rssm.RSSMV1
   init_args:
     deterministic_size: 64
     stochastic_size: 16
     hidden_size: 64
-    obs_embed_size: 1024
+    obs_embed_size: 256
     action_size: 3
     activation_name: ELU
+    encoder_config:
+      linear_sizes: [256,]
+      activation_name: ELU
+      out_activation_name: Identity
+      channels: [8, 16, 32]
+      kernel_sizes: [3, 3, 3]
+      strides: [2, 2, 2]
+      paddings: [1, 1, 1]
+      observation_shape: [3, 64, 64]
+    decoder_config:
+      linear_sizes: [80, 256]
+      activation_name: ELU
+      out_activation_name: Sigmoid
+      channels: [32, 16, 8, 3]
+      kernel_sizes: [4, 4, 4]
+      strides: [2, 2, 2]
+      paddings: [1, 1, 1]
+      output_paddings: [0, 0, 0]
+      observation_shape: [3, 64, 64]
     kl_coeff: 0.1
 
 optimizer:
@@ -36,7 +57,7 @@ trainer:
       class_path: EarlyStopping
       init_args:
         monitor: val_loss
-        patience: 30
+        patience: 50
         mode: min
         verbose: True
     - 
@@ -51,20 +72,19 @@ trainer:
         every_n_epochs: 30
         indices: [0, 1, 2, 3, 4, 5, 6, 7]
         query_length: 10
+        fps: 20
 
 data:
   class_path: rssm.dataset.EpisodeDataModule
   init_args:
     data_name: two_buttons
-    batch_size: 8
+    batch_size: 16
     num_workers: 4
-    action_transform:
+
+    action_preprocess:
       class_path: torchvision.transforms.Compose
       init_args:
         transforms:
-          - class_path: rssm.transform.RandomWindow
-            init_args:
-              window_size: 64
           - class_path: rssm.transform.RemoveDim
             init_args:
               axis: -1
@@ -73,13 +93,11 @@ data:
             init_args:
               mean: [2026.5, 1996.0, 2180.5]
               std: [478.5, 373.0, 314.5]
-    observation_transform:
+
+    observation_preprocess:
       class_path: torchvision.transforms.Compose
       init_args:
         transforms:
-          - class_path: rssm.transform.RandomWindow
-            init_args:
-              window_size: 64
           - class_path: einops.layers.torch.Rearrange
             init_args:
               pattern: B H W C -> B C H W
@@ -90,26 +108,44 @@ data:
             init_args:
               mean: 0.0
               std: 255.0
-    # observation_augmentation:
-    #   class_path: torchvision.transforms.Compose
-    #   init_args:
-    #     transforms:
-    #       - class_path: kornia.augmentation.RandomGaussianNoise
-    #         init_args:
-    #           p: 0.5
-    #           mean: 0.0
-    #           std: 0.1
-    #       - class_path: kornia.augmentation.ColorJitter
-    #         init_args:
-    #           p: 0.3
-    #           brightness: 0.1
-    #           contrast: 0.1
-    #           saturation: 0.1
-    #           hue: 0.1
-    #       - class_path: kornia.augmentation.RandomBoxBlur
-    #         init_args:
-    #           p: 0.3
-    #           kernel_size: [3, 3]
-    #       - class_path: kornia.augmentation.RandomErasing
-    #         init_args:
-    #           p: 0.3
+
+    action_transform:
+      class_path: torchvision.transforms.Compose
+      init_args:
+        transforms:
+          - class_path: rssm.transform.RandomWindow
+            init_args:
+              window_size: 128
+
+    observation_transform:
+      class_path: torchvision.transforms.Compose
+      init_args:
+        transforms:
+          - class_path: rssm.transform.RandomWindow
+            init_args:
+              window_size: 128
+
+
+    observation_augmentation:
+      class_path: torchvision.transforms.Compose
+      init_args:
+        transforms:
+          - class_path: kornia.augmentation.RandomGaussianNoise
+            init_args:
+              p: 0.5
+              mean: 0.0
+              std: 0.1
+          - class_path: kornia.augmentation.ColorJitter
+            init_args:
+              p: 0.3
+              brightness: 0.1
+              contrast: 0.1
+              saturation: 0.1
+              hue: 0.1
+          - class_path: kornia.augmentation.RandomBoxBlur
+            init_args:
+              p: 0.3
+              kernel_size: [3, 3]
+          - class_path: kornia.augmentation.RandomErasing
+            init_args:
+              p: 0.3
