--- a/config/two_buttons_v2.yaml
+++ b/config/two_buttons_v2.yaml
@@ -4,24 +4,25 @@ seed_everything: 42
 model:
   class_path: rssm.RSSMV2
   init_args:
-    deterministic_size: 600
+    deterministic_size: 400
     class_size: 16
     category_size: 16
-    hidden_size: 600
-    obs_embed_size: 512
+    hidden_size: 400
+    obs_embed_size: 256
     action_size: 3
     activation_name: ELU
     encoder_config:
-      linear_sizes: [512,]
+      linear_sizes: [256,]
       activation_name: ELU
       out_activation_name: Identity
       channels: [16, 32, 64]
       kernel_sizes: [3, 3, 3]
       strides: [2, 2, 2]
       paddings: [1, 1, 1]
-      observation_shape: [3, 64, 64]
+      observation_shape: [5, 64, 64]
+      coord_conv: true
     decoder_config:
-      linear_sizes: [856, ]
+      linear_sizes: [656, ]
       activation_name: ELU
       out_activation_name: Sigmoid
       channels: [64, 32, 16, 3]
@@ -30,6 +31,7 @@ model:
       paddings: [1, 1, 1]
       output_paddings: [0, 0, 0]
       observation_shape: [3, 64, 64]
+      depth: 12
     kl_coeff: 0.1
 
 optimizer:
@@ -37,10 +39,19 @@ optimizer:
   init_args:
     lr: 0.001
 
+lr_scheduler:
+  class_path: lightning.pytorch.cli.ReduceLROnPlateau
+  init_args:
+    monitor: val_loss
+    mode: min
+    factor: 0.5
+    patience: 50
+    verbose: True
+
 trainer:
   accelerator: gpu
   devices: [1]
-  max_epochs: -1
+  max_epochs: 2000
   gradient_clip_val: 10
   deterministic: true
   precision: 16-mixed
@@ -58,7 +69,7 @@ trainer:
       class_path: EarlyStopping
       init_args:
         monitor: val_loss
-        patience: 50
+        patience: 200
         mode: min
         verbose: True
     - 
@@ -131,11 +142,11 @@ data:
       class_path: torchvision.transforms.Compose
       init_args:
         transforms:
-          - class_path: kornia.augmentation.RandomGaussianNoise
-            init_args:
-              p: 0.5
-              mean: 0.0
-              std: 0.1
+          # - class_path: kornia.augmentation.RandomGaussianNoise
+          #   init_args:
+          #     p: 0.5
+          #     mean: 0.0
+          #     std: 0.1
           - class_path: kornia.augmentation.ColorJitter
             init_args:
               p: 0.3
@@ -143,10 +154,10 @@ data:
               contrast: 0.1
               saturation: 0.1
               hue: 0.1
-          - class_path: kornia.augmentation.RandomBoxBlur
-            init_args:
-              p: 0.3
-              kernel_size: [3, 3]
-          - class_path: kornia.augmentation.RandomErasing
-            init_args:
-              p: 0.3
+          # - class_path: kornia.augmentation.RandomBoxBlur
+          #   init_args:
+          #     p: 0.3
+          #     kernel_size: [3, 3]
+          # - class_path: kornia.augmentation.RandomErasing
+          #   init_args:
+          #     p: 0.3
