--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ dependencies = [
     "wandb>=0.16.4",
     "torchrl>=0.3.1",
     "distribution-extension @ git+https://github.com/nomutin/distribution-extension.git",
-    "cnn @ git+https://github.com/nomutin/CNN.git",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
@@ -31,6 +30,7 @@ dev-dependencies = [
     "einops>=0.8.0",
     "torchvision>=0.18.0",
     "jsonargparse[signatures]>=4.27.7",
+    "cnn @ git+https://github.com/nomutin/CNN",
 ]
 
 [tool.hatch.metadata]
@@ -54,7 +54,6 @@ ignore = [
     "CPY001",  # missing-copyright-notice
     "ISC001",  # single-line-implicit-string-concatenation
     "COM812",  # missing-comma-in-multiline
-    "PLR0913", # too-many-arguments  
 ]
 fixable = ["ALL"]
 unfixable = []
@@ -66,6 +65,13 @@ preview = true
 
 [tool.ruff.lint.isort]
 known-first-party = ["rssm"]
+
+[tool.ruff.lint.per-file-ignores]
+"src/rssm/core.py" = ["PLR0913"]
+"src/rssm/networks/v1.py" = ["PLR0913"]
+"src/rssm/networks/v2.py" = ["PLR0913"]
+"src/rssm/dataset.py" = ["PLR0913"]
+"src/rssm/callback.py" = ["SLF001"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
