--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ dependencies = [
     "lightning>=2.2.1",
     "wandb>=0.16.4",
     "torchrl>=0.3.1",
+    "hydra-core>=1.3.2",
     "distribution-extension @ git+https://github.com/nomutin/distribution-extension.git",
 ]
 readme = "README.md"
