--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "rssm"
-version = "0.1.3"
+version = "0.1.4"
 description = "Reccurent State-Space Model"
 dependencies = [
     "lightning>=2.2.1",
@@ -18,8 +18,8 @@ build-backend = "hatchling.build"
 managed = true
 dev-dependencies = [
     "mypy>=1.9.0",
-    "ruff>=0.4.2",
     "pytest-cov>=5.0.0",
+    "ruff>=0.5.1",
 ]
 
 [tool.hatch.metadata]
@@ -48,11 +48,7 @@ target-version = "py310"
 [tool.ruff.lint]
 preview = true
 select = ["ALL"]
-ignore = [
-    "CPY001",  # missing-copyright-notice
-    "ISC001",  # single-line-implicit-string-concatenation
-    "COM812",  # missing-comma-in-multiline
-]
+ignore = ["CPY001"]
 fixable = ["ALL"]
 unfixable = []
 exclude = [".git", ".ruff_cache", ".venv",]
