--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Reccurent State-Space Model"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "cnn",
     "lightning[extra]>=2.4.0",
     "torchrl>=0.5.0",
 ]
@@ -21,6 +22,7 @@ train = [
     "distribution-extension",
     "gdown>=5.2.0",
     "torchvision>=0.19.1",
+    "wandb[media]>=0.18.3",
 ]
 
 [build-system]
@@ -32,6 +34,7 @@ package = true
 
 [tool.uv.sources]
 distribution-extension = { git = "https://github.com/nomutin/distribution-extension" }
+cnn = { git = "https://github.com/nomutin/CNN.git" }
 
 [tool.mypy]
 python_version = "3.10"
@@ -66,7 +69,7 @@ known-first-party = ["rssm"]
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
 
-[tool.poe.tasks.run]
+[tool.poe.tasks.train]
 script = "lightning.pytorch.cli:LightningCLI(save_config_kwargs={'overwrite': True})"
 
 [tool.pydoclint]
