--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: astral-sh/setup-uv@v3
       - name: Install dependencies
         run: |
-          uv sync --extra dev
+          uv sync --all-extras
       - name: Run lint
         run: |
           uv run ruff check .
