--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,9 +69,16 @@ known-first-party = ["rssm"]
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
 
-[tool.poe.tasks.train]
-script = "lightning.pytorch.cli:LightningCLI(save_config_kwargs={'overwrite': True})"
-
 [tool.pydoclint]
 style = 'numpy'
 exclude = '\.git|\.ruff_cache|\.mypy_cache|\.venv'
+
+[tool.poe.tasks]
+lint-ruff = "ruff check --fix ."
+lint-mypy = "mypy --strict ."
+lint-pydoclint = "pydoclint ."
+lint = ["lint-ruff", "lint-pydoclint", "lint-mypy",]
+test = "pytest . --doctest-modules -ra --cov=src --cov-report=term --cov-report=xml"
+
+[tool.poe.tasks.train]
+script = "lightning.pytorch.cli:LightningCLI(save_config_kwargs={'overwrite': True})"
