--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
         run: |
           uv run ruff check .
           uv run mypy --strict .
-          uv run pydoclint .
+          # uv run pydoclint .
       - name: Run tests
         run: |
           uv run pytest -ra --cov=src --cov-report=term --cov-report=xml
